cmake_minimum_required ( VERSION 2.8)
project (Snake)
include_directories ("${PROJECT_SOURCE_DIR}")
find_package(OpenGL REQUIRED)
if( NOT OPENGL_FOUND)
    message(ERROR, " OpenGL not found!")
else()
endif()
find_package(GLUT REQUIRED)
if( NOT GLUT_FOUND )
    message(ERROR, " Glut not found!")
endif()
message("Libs: ${GLUT_glut_LIBRARY}")
add_executable(Snake main.cpp Application.cpp BaseEventHandler.cpp CollisionChecker.cpp CollisionObject.cpp SnakeHead.cpp SnakeSegment.cpp Timer.cpp)
target_link_libraries(Snake ${OPENGL_LIBRARIES} ${GLUT_glut_LIBRARY})

